# cosmos-plausibility-gatekeeper

./: .env.example  README.md  pyproject.toml
data/samples/: clip_01_detections.json  clip_02_detections.json  clip_03_detections.json
outputs/reports/: clip_01_verdict.json  clip_02_verdict.json  clip_03_verdict.json
scripts/: export_submission.py  make_dummy_clip.py  run_batch.py  run_demo.py
src/cosmos_plausibility_gatekeeper.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/gatekeeper/: config.py  pipeline.py
src/gatekeeper/io/: detections.py  schema.py  video.py
src/gatekeeper/plausibility/: constraints.py  heuristics.py  scoring.py
src/gatekeeper/reasoning/: cosmos_client.py  postprocess.py  prompt_templates.py
src/gatekeeper/viz/: render_overlay.py  report.py
tests/: test_postprocess.py  test_schema.py
